--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<DOCTYPE html>
+DOCTYPE html>
 <html lang="en" ng-app="NarrowItDownApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Week Assignment -3</title>
+        <title>Narrow Down Your Menu Choice</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/bootstrap.min.css">
         <link rel="stylesheet" href="styles/styles.css">
@@ -20,7 +20,7 @@
                 <div class="form-group col-sm-4">
                     <button class="btn btn-primary"
                             ng-click="ctrl.getMatchedMenuItems(ctrl.searchTerm)">
-                  So,It Is Narrow It Down For Me!
+                    Narrow It Down For Me!
                     </button>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <found-items ng-show="ctrl.isShowTable" found-items="ctrl.found"
                          on-remove="ctrl.removeItem(index)"></found-items>
             <div class="alert alert-warning" ng-show="ctrl.isShowWarning">
-              So,There is Nothing found!
+                Nothing found!
             </div>
         </div>
         <script src="js/angular.min.js" type="text/javascript"></script>
